syntax = "proto3";

package user;

option go_package = "gen/service";

service UserService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc SingIn(SingInRequest) returns (SingInResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
}

message SignUpRequest {
  string login_name = 1;
  string password = 2;
}

message SignUpResponse {
  string token = 1;
}

message SingInRequest {
  string login_name = 1;
  string password = 2;
}

message SingInResponse {
  string token = 1;
}

message User {
  int32 id = 1;
  string login_name = 2;
}

message ListRequest {}

message ListResponse {
  repeated User users = 1;
}


